Mon May 09 11:02:08 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: If python is found, also check that Python.h exists
	  (it may not be if the python-dev package (or similar) isn't
	  installed).

Mon May 09 11:00:08 BST 2005  Olly Betts <olly@survex.com>

	* python/extra.i: Removed python iter wrappers for removed methods
	  QueryParser::termlist_begin() and termlist_end().

Mon May 09 10:54:47 BST 2005  Olly Betts <olly@survex.com>

	* xapian.i: Removed wrappers for removed methods
	  QueryParser::termlist_begin() and termlist_end().

Fri May 06 23:22:28 BST 2005  Olly Betts <olly@survex.com>

	* NEWS: Updated in preparation for 0.9.0.

Fri May 06 20:39:50 BST 2005  Olly Betts <olly@survex.com>

	* python/Makefile.am: Use correct path separator in PYTHONPATH when
	  generating .pyc file.

Fri May 06 17:57:05 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac,python/Makefile.am: Make configure probe for correct
	  separator to use in PYTHONPATH.

Thu May 05 13:17:36 BST 2005  Olly Betts <olly@survex.com>

	* skiptest: Add skiptest script needed by last-but-one commit.

Thu May 05 12:44:01 BST 2005  Olly Betts <olly@survex.com>

	* xapian.i: Back out PHP4 specific hacks added since 0.8.5 which
	  were only needed for SWIG 1.3.23 and later,

Wed May 04 18:07:49 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac,Makefile.am: Setting PHP4 to "exit 77 #" doesn't
	  actually work right, so use a trivial shell script to skip PHP
	  tests if we can't find the PHP interpreter.

Wed May 04 02:00:31 BST 2005  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,python/Makefile.am,java/native/Makefile.am,
	  guile/Makefile.am,tcl8/Makefile.am,php4/Makefile.am: Pass
	  -no-undefined in *_la_LDFLAGS because libtool requires in on
	  MS Windows.  Also use $(PATH_SEPARATOR) instead of ':' when
	  specifying search paths.

Fri Apr 29 09:57:17 BST 2005  Olly Betts <olly@survex.com>

	* xapian.i: Rename second version of Muscat36::open_da() for guile